--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
 					    </div>
 					  </div>
 					  <div class="card">
-					  	<img class="card-img-top feature" src="assets/images/feature-3.jpg">
+					  	<img class="card-img-top feature" src="assets/images/feature-3.JPG">
 					    <div class="card-body">
 					      <h4 class="card-title">Calaguas Islands, Camarines Norte</h4>
 					      <p class="card-text">Enjoy and relax with the white sand and crystal-clear water of Calaguas. </p>
