--- a/destination.html
+++ b/destination.html
@@ -160,7 +160,7 @@
 						</button>
 					</div> <!-- end of modal header -->
 					<div class="modal-body">
-						<img class="img-fluid" src="assets/images/modal-2.jpg">
+						<img class="img-fluid" src="assets/images/modal-2.JPG">
 						
 						<p class="text-justify">El Nido has different islands that you could go to via island hopping. There are many locals who offer tour packages. A day isn't enough to tour these places. If you plan to visit El Nido, I suggest stay for at least 4 days because less than that wouldn't be enough.</p>
 						<p class="text-justify">You can book a direct flight going here but it will be quite expensive. Some tourists choose to book a flight to Puerto Princesa then go to El Nido via riding a van. Just a reminder, the transportation by land will take 5 hours and the road isn't that developed yet.</p>
@@ -186,7 +186,7 @@
 						</button>
 					</div> <!-- end of modal header -->
 					<div class="modal-body">
-						<img class="img-fluid" src="assets/images/modal-3.jpg">
+						<img class="img-fluid" src="assets/images/modal-3.JPG">
 						
 						<p class="text-justify">You have two options when going to Calaguas. One is to go there by land via bus and the other one is by air. You could book a flight to Naga, Camarines Sur then ride a van going to Daet. Daet is a two-hour drive from Naga.</p>
 						<p class="text-justify">Since the number of tourists going to Calaguas is increasing, there are now several cottages and resorts where you can stay.</p>
