--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<hr class="my-4">
 					<blockquote class="text-center">"Our memories of the ocean will linger on, long after our footprints in the sand are gone."</blockquote>
 					<cite title=""></cite>
-					<p id="index-btn" class="text-center font-weight-bold"><a id="index-anchor" href="home.html">Let's Go!</a></p>
+					<p id="index-btn" class="text-center font-weight-bold"><a id="index-anchor" href="home.html"><u>Let's Go!</u></a></p>
 					
 				</div>
 			</div> <!-- end jumbo -->
