--- a/about.html
+++ b/about.html
@@ -6,23 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
 	
 	<!-- icon -->
-	<link rel="apple-touch-icon" sizes="57x57" href="assets/icon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="assets/icon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="assets/icon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="assets/icon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="assets/icon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="assets/icon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="assets/icon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="assets/icon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="assets/icon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="assets/icon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+	<link rel="icon" type="image/gif/png" href="assets/images/android-icon-72x72.png">
 
 	<title>Hey Beach</title>
 	
@@ -48,7 +32,8 @@
 		<img class="img-fluid" src="assets/images/head.jpg" alt="header-img">
 
 		<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-			<a class="navbar-brand" href="index.html">Logo</a>
+			<a class="navbar-brand" href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
+			<!-- <a class="navbar-brand" href="index.html">Logo</a> -->
 
 			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar-nav">
 				<span class="navbar-toggler-icon"></span>
@@ -57,7 +42,7 @@
 			<div id="navbar-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link active" href="home.html" target="_blank"> Home </a>
+						<a class="nav-link" href="home.html" target="_blank"> Home </a>
 					</li>
 
 					<li class="nav-item">
@@ -65,7 +50,7 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="about.html" target="_blank"> About </a>
+						<a class="nav-link active" href="about.html" target="_blank"> About </a>
 					</li>
 
 					<li class="nav-item">
@@ -85,11 +70,45 @@
 			</div>
 		</nav> <!-- end of nav -->
 
+		<div class="container con">
+			<div class="row mt-5">
+				<!-- <div class="col-12 col-md-12 m-auto"> -->
+				<img id="about-img" class="img-fluid mt-5" src="assets/images/image.jpg" alt="author-image">
+			</div>
+				<!-- </div> -->
+				
+			<div class="row">
+				<div class="col-12 col-md-12">
+					<h3 class="text-center mt-3">The Author</h3>
+					<p class="text-center"><span id="about-title">Bernette Gaerlan</span> has been travelling to different places ever since she was young but what she loves the most is swimming. Her father was in the Navy and is a great swimmer. He used to be assigned in places that are near the sea while he was still in the service so Bernette would always go to the beaches like in El Nido and Cebu. Going to the beach is her comfort zone.</p>
+					<p class="text-center">Bernette studied at De La Salle - College of St. Benilde with the degree of Bachelor of Science in Information Systems but a blogger and swimmer at heart.</p>
+					<hr class="mt-5 mb-4">
+					<div class="row">
+						<div class="col-12 col-md-6 col-lg-6">
+							<img class="img-fluid" src="assets/images/author-image1.jpg" alt="author-image">
+						</div>
+						<div class="col-12 col-md-6 col-lg-6">
+							<img class="img-fluid" src="assets/images/author-image3.jpg" alt="author-image">
+						</div>
+					</div>
+					<hr class="mt-4">
+				</div>
 
-		<!-- <footer class="footer mt-5">
+				<div class="col-12 col-md-12 mb-4">
+					<h3 class="text-center mt-5">Hey Beach</h3>
+					<p class="text-center"><span id="about-title">Hey Beach</span> is a travel blog website that is mainly about beaches. Since Bernette loves visiting beaches, she decided to have a blog site that is only about beaches especially here in the Philippines. </p>
+					<p class="text-center">The goal of this blog is to help readers know more about the beaches of the Philippines. There are places here in the country that isn't that well-known yet. Bernette would like to share her knowledge of these places she's been to. But just remember, if we're going to tour places let us be responsible all the time.</p>
+				</div>
+			</div>
+		</div>
+
+
+
+		<footer class="footer mt-5">
 			<p class="p-3 mb-0 text-center"> Bernette Gaerlan | Hey Beach &copy; 2018 </p>
-		</footer> -->
-	</div>
+		</footer>
+
+	</div> <!-- end of container fluid -->
 	
 
 
