--- a/contact.html
+++ b/contact.html
@@ -6,23 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
 	
 	<!-- icon -->
-	<link rel="apple-touch-icon" sizes="57x57" href="assets/icon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="assets/icon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="assets/icon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="assets/icon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="assets/icon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="assets/icon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="assets/icon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="assets/icon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="assets/icon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="assets/icon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+	<link rel="icon" type="image/gif/png" href="assets/images/android-icon-72x72.png">
 
 	<title>Hey Beach</title>
 	
@@ -44,11 +28,10 @@
 <body id="body">
 
 	<div class="container-fluid px-0">
-		<!-- <img class="img-fluid" src="assets/images/head.jpg" alt="header-img"> -->
 
 		<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-			<a class="navbar-brand" href="index.html">Logo</a>
-
+			<a class="navbar-brand" href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
+	
 			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar-nav">
 				<span class="navbar-toggler-icon"></span>
 			</button>
