--- a/home.html
+++ b/home.html
@@ -32,8 +32,8 @@
 		<img class="img-fluid" src="assets/images/head.jpg" alt="header-img">
 
 		<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-			<!-- <a class="navbar-brand" href="index.html"><img src="assets/images/logo1.png" alt="logo"></a> -->
-			<a class="navbar-brand" href="index.html">Logo</a>
+			<a class="navbar-brand" href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
+			<!-- <a class="navbar-brand" href="index.html">Logo</a> -->
 
 			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar-nav">
 				<span class="navbar-toggler-icon"></span>
@@ -119,12 +119,12 @@
 			</div>
 		</div> <!-- end of container -->
 
-		<hr class="line mt-5">
+		<hr class="line mt-4">
 
 		<div class="container second">
 
 			<section id="features">
-			<h2 class="text-center">Latest Post</h2>
+			<h2 class="text-center mb-4">Latest Post</h2>
 				<div class="card-deck">
 					  <div class="card">
 					  	<img class="card-img-top img-fluid feature" src="assets/images/feature-1.jpg">
