--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 	<!-- google fonts	 -->
-	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Armata|Rock+Salt|Rancho|Handlee" rel="stylesheet">
 
 	<!-- Animate CSS	 -->
 	<link rel="stylesheet" type="text/css" href="assets/css/Animate.css">
@@ -50,7 +50,7 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link active" href="about.html" target="_blank"> About </a>
+						<a class="nav-link active" href="about.html"> About </a>
 					</li>
 
 					<li class="nav-item">
@@ -79,9 +79,9 @@
 				
 			<div class="row">
 				<div class="col-12 col-md-12">
-					<h3 class="text-center mt-3">The Author</h3>
-					<p class="text-center"><span id="about-title">Bernette Gaerlan</span> has been travelling to different places ever since she was young but what she loves the most is swimming. Her father was in the Navy and is a great swimmer. He used to be assigned in places that are near the sea while he was still in the service so Bernette would always go to the beaches like in El Nido and Cebu. Going to the beach is her comfort zone.</p>
-					<p class="text-center">Bernette studied at De La Salle - College of St. Benilde with the degree of Bachelor of Science in Information Systems but a blogger and swimmer at heart.</p>
+					<h3 class="about text-center mt-3">The Author</h3>
+					<p class="about-text text-center"><span id="about-title">Bernette Gaerlan</span> has been travelling to different places ever since she was young but what she loves the most is swimming. Her father was in the Navy and is a great swimmer. He used to be assigned in places that are near the sea while he was still in the service so Bernette would always go to the beaches like in El Nido and Cebu. Going to the beach is her comfort zone.</p>
+					<p class="about-text text-center">Bernette studied at De La Salle - College of St. Benilde with the degree of Bachelor of Science in Information Systems but a blogger and swimmer at heart.</p>
 					<hr class="mt-5 mb-4">
 					<div class="row">
 						<div class="col-12 col-md-6 col-lg-6">
@@ -95,9 +95,9 @@
 				</div>
 
 				<div class="col-12 col-md-12 mb-4">
-					<h3 class="text-center mt-5">Hey Beach</h3>
-					<p class="text-center"><span id="about-title">Hey Beach</span> is a travel blog website that is mainly about beaches. Since Bernette loves visiting beaches, she decided to have a blog site that is only about beaches especially here in the Philippines. </p>
-					<p class="text-center">The goal of this blog is to help readers know more about the beaches of the Philippines. There are places here in the country that isn't that well-known yet. Bernette would like to share her knowledge of these places she's been to. But just remember, if we're going to tour places let us be responsible all the time.</p>
+					<h3 class="about text-center mt-5">Hey Beach</h3>
+					<p class="about-text text-center"><span id="about-title">Hey Beach</span> is a travel blog website that is mainly about beaches. Since Bernette loves visiting beaches, she decided to have a blog site that is only about beaches especially here in the Philippines. </p>
+					<p class="about-text text-center">The goal of this blog is to help readers know more about the beaches of the Philippines. There are places here in the country that isn't that well-known yet. Bernette would like to share her knowledge about these places she's been to. But just remember, if we're going to tour places let us be responsible all the time.</p>
 				</div>
 			</div>
 		</div>
