--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 	<!-- google fonts	 -->
-	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Armata|Rock+Salt|Rancho|Handlee|Itim" rel="stylesheet">
 
 	<!-- Animate CSS	 -->
 	<link rel="stylesheet" type="text/css" href="assets/css/Animate.css">
@@ -43,7 +43,7 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="destination.html"> Destination </a>
+						<a class="nav-link" href="destination.html" target="_blank"> Destination </a>
 					</li>
 
 					<li class="nav-item">
@@ -51,7 +51,7 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link active" href="contact.html" target="_blank"> Contact </a>
+						<a class="nav-link active" href="contact.html"> Contact </a>
 					</li>
 				</ul>
 			</div> <!-- end of navbar div -->
@@ -77,6 +77,7 @@
 				
 				<header class="contact-header col-12">
 					<h2 class="contact-form text-center py-3">Contact Form</h2>
+					<p class="contact-text text-center">If you have comments and/or suggestions, please share your thoughts with me using this form.</p>
 				</header>
 
 				<div class="col-12 col-md-12 col-lg-6 offset-lg-3">
@@ -107,7 +108,7 @@
 							<textarea id="message" class="form-control" placeholder="Enter Your Message Here"></textarea>
 						</div> <!-- end of form group -->
 
-						<button class="btn btn-block btn-primary">Submit</button>
+						<button class="btn-submit btn btn-block btn-primary">Submit</button>
 						
 					</form>
 
