--- a/home.html
+++ b/home.html
@@ -19,11 +19,9 @@
 	<!-- external css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<!-- animate css -->
-	<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-
 	<!-- google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Armata|Contrail+One|Handlee|Kaushan+Script|Rancho|Rock+Salt" rel="stylesheet">
+
 </head>
 <body id="body">
 
@@ -42,7 +40,7 @@
 			<div id="navbar-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link active" href="home.html" target="_blank"> Home </a>
+						<a class="nav-link active" href="home.html"> Home </a>
 					</li>
 
 					<li class="nav-item">
@@ -72,7 +70,7 @@
 
 		<div class="container first">
 
-			<h1 class="text-center mb-5">Hey Beach</h1>
+			<h1 class="title text-center mb-5">Hey Beach</h1>
 			<div class="row">
 				<div class="col-12 col-md-6">
 					<div id="carousel-controls" class="carousel slide" data-ride="carousel" data-interval="2500">
@@ -109,12 +107,12 @@
 					</div>
 				</div>
 				<div class="col-12 col-md-12 col-lg-6 mt-3">
-					<h2 class="text-center">Explore</h2>
-					<p class="text-center">The Philippines has several islands you can explore. Whether you go to Luzon, Visayas or Mindanao, these places have amazing beaches. </p>
-					<h2 class="text-center">Encounter</h2>
-					<p class="text-center">You can encounter different sea animals under the sea! </p>
-					<h2 class="text-center">Dive</h2>
-					<p class="text-center">Dive into history as you explore the sea. </p>
+					<h2 class="home-intro text-center">Explore</h2>
+					<p class="home-text text-center">The Philippines has several islands you can explore. Whether you go to Luzon, Visayas or Mindanao, these places have amazing beaches. </p>
+					<h2 class="home-intro text-center">Encounter</h2>
+					<p class="home-text text-center">You can encounter different sea animals under the sea! </p>
+					<h2 class="home-intro text-center">Dive</h2>
+					<p class="home-text text-center">Dive into history as you explore the sea. </p>
 				</div>
 			</div>
 		</div> <!-- end of container -->
@@ -124,7 +122,7 @@
 		<div class="container second">
 
 			<section id="features">
-			<h2 class="text-center mb-4">Latest Post</h2>
+			<h2 class="home-post text-center mb-4">Latest Post</h2>
 				<div class="card-deck">
 					  <div class="card">
 					  	<img class="card-img-top img-fluid feature" src="assets/images/feature-1.jpg">
