--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 	<!-- google fonts	 -->
-	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda|Itim" rel="stylesheet">
 
 	<!-- Animate CSS	 -->
 	<link rel="stylesheet" type="text/css" href="assets/css/Animate.css">
