--- a/home.html
+++ b/home.html
@@ -150,7 +150,15 @@
 		</div>
 
 		<footer class="footer mt-5">
-			<p class="p-3 mb-0 text-center"> Bernette Gaerlan | Hey Beach &copy; 2018 </p>
+			<div class="row container-fluid m-0">
+				<div class="col-12 col-md-6">
+					<h4 class="ml-auto mt-2 text-center">Disclaimer</h4>
+					<small class="text-center">No copyright infringement intended, we do not own the images nor we take credit for it, we are not selling the website or making profits from it and it is used only for educational purposes.</small>
+				</div>
+				<div class="col-12 col-md-6">
+					<p class="p-5 mb-0 text-center mr-auto"> Bernette Gaerlan | Hey Beach &copy; 2018 </p>
+				</div>
+			</div>
 		</footer>
 		
 
