--- a/destination.html
+++ b/destination.html
@@ -29,7 +29,7 @@
 <body id="body">
 
 	<div class="container-fluid px-0">
-		<img class="img-fluid" src="assets/images/head.jpg" alt="header-img">
+		<img id="top" class="img-fluid" src="assets/images/head.jpg" alt="header-img">
 
 		<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
 			<a class="navbar-brand" href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
@@ -74,7 +74,7 @@
 			<div class="container">
 				<div class="row mt-5">
 					<div class="col-12 col-md-12 col-lg-6">
-						<img class="destinations img-fluid d-flex" src="assets/images/destination-01.jpg">
+						<img class="destinations img-fluid d-flex" src="assets/images/destination-01.jpg" data-toggle="modal" data-target="#modal-bo">
 					</div>
 					<div class="col-12 col-md-12 col-lg-6">
 						<h4 class="desti-head text-center mt-3">Bolinao, Pangasinan</h4>
@@ -84,7 +84,7 @@
 				</div> <!-- end of row -->
 				<div class="row mt-5">
 					<div class="col-12 col-md-12 col-lg-6">
-						<img class="destinations img-fluid d-flex" src="assets/images/destination-02.jpg">
+						<img class="destinations img-fluid d-flex" src="assets/images/destination-02.jpg" data-toggle="modal" data-target="#modal-kal">
 					</div>
 					<div class="col-12 col-md-12 col-lg-6">
 						<h4 class="desti-head text-center mt-3">Palompon, Leyte</h4>
@@ -92,9 +92,9 @@
 						<button class="btn-des btn btn-large" data-toggle="modal" data-target="#modal-kal">Read more</button>
 					</div>
 				</div> <!-- end of row -->
-				<div class="row mt-5">
+				<div  id="cebu" class="row mt-5">
 					<div class="col-12 col-md-12 col-lg-6">
-						<img class="destinations img-fluid d-flex" src="assets/images/destination-1.jpg">
+						<img class="destinations img-fluid d-flex" src="assets/images/destination-1.jpg" data-toggle="modal" data-target="#modal-cebu">
 					</div>
 					<div class="col-12 col-md-12 col-lg-6">
 						<h4 class="desti-head text-center mt-3">Oslob, Cebu</h4>
@@ -105,7 +105,7 @@
 
 				<div class="row mt-5">
 					<div class="col-12 col-md-12 col-lg-6">
-						<img class="destinations img-fluid d-flex" src="assets/images/destination-2.jpg">
+						<img class="destinations img-fluid d-flex" src="assets/images/destination-2.jpg" data-toggle="modal" data-target="#modal-pala">
 					</div>
 					<div class="col-12 col-md-12 col-lg-6">
 						<h4 class="desti-head text-center mt-3">El Nido, Palawan</h4>
@@ -116,7 +116,7 @@
 
 				<div class="row mt-5">
 					<div class="col-12 col-md-12 col-lg-6">
-						<img class="destinations img-fluid d-flex" src="assets/images/destination-3.jpg">
+						<img class="destinations img-fluid d-flex" src="assets/images/destination-3.jpg" data-toggle="modal" data-target="#modal-cala">
 					</div>
 					<div class="col-12 col-md-12 col-lg-6">
 						<h4 class="desti-head text-center mt-3">Calaguas Islands, Camarines Norte</h4>
@@ -254,15 +254,25 @@
 			</div>
 		</div> <!-- end of modal -->
 
-		<!-- <div class="row mt-5">
-			<div class="col-12 col-md-12">
-				<a href="#top"><p class="text-center">Back to top</p></a>
+		<div class="container">
+			<div class="row mt-5">
+				<div class="col-12 col-md-12">
+					<a href="#top"><p class="text-center">Back to top</p></a>
+				</div>
 			</div>
-		</div> -->
+		</div>
 
 
 		<footer class="footer mt-5">
-				<p class="p-3 mb-0 text-center"> Bernette Gaerlan | Hey Beach &copy; 2018 </p>
+			<div class="row container-fluid m-0">
+				<div class="col-12 col-md-6">
+					<h4 class="mt-2 text-center">Disclaimer</h4>
+					<small class="text-center">No copyright infringement intended, we do not own the images nor we take credit for it, we are not selling the website or making profits from it and it is used only for educational purposes.</small>
+				</div>
+				<div class="col-12 col-md-6">
+					<p class="p-4 mb-0 text-center mr-auto"> Bernette Gaerlan | Hey Beach &copy; 2018 </p>
+				</div>
+			</div>
 		</footer>
 
 	</div> <!-- end of container fluid -->
