--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<!-- icon -->
 	<link rel="icon" type="image/gif/png" href="assets/images/android-icon-72x72.png">
 
-	<title>Hey Beach</title>
+	<title>Hey Beach | About</title>
 	
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
