--- a/about.html
+++ b/about.html
@@ -42,11 +42,11 @@
 			<div id="navbar-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="home.html" target="_blank"> Home </a>
+						<a class="nav-link" href="home.html"> Home </a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="destination.html" target="_blank"> Destination </a>
+						<a class="nav-link" href="destination.html"> Destination </a>
 					</li>
 
 					<li class="nav-item">
@@ -54,7 +54,7 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html" target="_blank"> Contact </a>
+						<a class="nav-link" href="contact.html"> Contact </a>
 					</li>
 				</ul>
 			</div> <!-- end of navbar div -->
