--- a/contact.html
+++ b/contact.html
@@ -39,15 +39,15 @@
 			<div id="navbar-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="home.html" target="_blank"> Home </a>
+						<a class="nav-link" href="home.html"> Home </a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="destination.html" target="_blank"> Destination </a>
+						<a class="nav-link" href="destination.html"> Destination </a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="about.html" target="_blank"> About </a>
+						<a class="nav-link" href="about.html"> About </a>
 					</li>
 
 					<li class="nav-item">
