--- a/destination.html
+++ b/destination.html
@@ -42,7 +42,7 @@
 			<div id="navbar-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="home.html" target="_blank"> Home </a>
+						<a class="nav-link" href="home.html"> Home </a>
 					</li>
 
 					<li class="nav-item">
@@ -50,11 +50,11 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="about.html" target="_blank"> About </a>
+						<a class="nav-link" href="about.html"> About </a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html" target="_blank"> Contact </a>
+						<a class="nav-link" href="contact.html"> Contact </a>
 					</li>
 				</ul>
 			</div> <!-- end of navbar div -->
