--- a/home.html
+++ b/home.html
@@ -44,15 +44,15 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="destination.html" target="_blank"> Destination </a>
+						<a class="nav-link" href="destination.html"> Destination </a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="about.html" target="_blank"> About </a>
+						<a class="nav-link" href="about.html"> About </a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html" target="_blank"> Contact </a>
+						<a class="nav-link" href="contact.html"> Contact </a>
 					</li>
 				</ul>
 			</div> <!-- end of navbar div -->
