--- a/destination.html
+++ b/destination.html
@@ -257,7 +257,7 @@
 		<div class="container">
 			<div class="row mt-5">
 				<div class="col-12 col-md-12">
-					<a href="#top"><p class="text-center">Back to top</p></a>
+					<a href="#top"><p class="text-center"><u>Back to top</u></p></a>
 				</div>
 			</div>
 		</div>
