--- a/destination.html
+++ b/destination.html
@@ -140,7 +140,7 @@
 					<div class="modal-body">
 						<img class="img-fluid" src="assets/images/modal-01.jpg">
 						<p class="desti-text text-justify">There are several beaches here in Bolinao but most people go to Patar Beach. It is quite far from the town of Bolinao but this is one of the best places you could enjoy your vacation or trip.</p>
-						<p class="text-justify">If you don't want to be far from the town, you could stay at El Pescador Resort. It's a beautiful place you can enjoy. If you got tired from swimming at the beach, you could just relax at their swimming pool.</p>
+						<p class="desti-text text-justify">If you don't want to be far from the town, you could stay at El Pescador Resort. It's a beautiful place you can enjoy. If you got tired from swimming at the beach, you could just relax at their swimming pool.</p>
 						<p class="desti-text text-justify">To know more about El Pescador Resort Hotel, click this <a href="https://www.elpescadorbolinao.com/" target="_blank">link.</a></p>
 					</div> <!-- end of modal body -->
 
