--- a/home.html
+++ b/home.html
@@ -13,14 +13,18 @@
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
-	<!-- bootstrap css - declare first before external css -->
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+	<!-- google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Armata|Contrail+One|Handlee|Kaushan+Script|Rancho|Rock+Salt" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 	<!-- external css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<!-- google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Armata|Contrail+One|Handlee|Kaushan+Script|Rancho|Rock+Salt" rel="stylesheet">
+	
 
 </head>
 <body id="body">
@@ -164,13 +168,5 @@
 
 	</div> <!-- end of container-fluid -->
 
-
-	<!-- jquery first then popper then bootstrap js - to function properly-->
-	<script src="assets/js/jquery-3.3.1.min.js"></script>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-	<!-- external bootstrap js -->
-	<script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
